added about me section and styled header to center

--- a/ilcPortfolio.html
+++ b/ilcPortfolio.html
@@ -8,13 +8,32 @@
 </head>
 
 <body>
-    <section>
+    <header>
         <h1 class="hello">Hello!</h1>
         <p>Thank you for visiting.</p>
         <h2>My name is Isabel</h2>
-    </section>
-    <h4 class="aboutme">About me</h4>
-    <div>
+    </header>
+    <section>
+        <h4 class="aboutme">About me</h4>
+        <img src="" alt="">
+        <p>
+            I come from a very large family. I grew up with people constantly around me, whether I wanted it or not.
+            This taught me many valuable things early in life, but the most important is valuing your own personality
+            and Individuality. No matter how similar your experiences might be to someone else, no one will have the
+            same exact memories, values, or perception of things. I am the only one with my Individuality and I want to
+            use it to make an impact on the world.
+        </p>
+        <p>
+            I am determined to succeed, committed to doing what it takes, and passionate about creating a better life
+            for myself and those around me.
+        </p>
+        <p>
+            I worked many years as a pharmacy technician while going to school part time and graduated in 2018 from KSU
+            with a B.S. in Biology. I gained interest in technology and software engineering a few years ago from a
+            roommate. I started working through an online bootcamp and really enjoyed it and learning there are so many
+            possibilities you can apply this to. I also enjoy playing sports, outdoor activities and traveling.
+        </p>
+
         <h4>Where I have been:</h4>
         <ul>
             <li>Toronto, Canada</li>
@@ -28,7 +47,7 @@
             <li>Florence, Italy</li>
             <li>La Spezia, Italy</li>
         </ul>
-    </div>
+    </section>
 </body>
 
 </html>
