created and linked travel html and css sheet, anchor tag travel.

--- a/ilcPortfolio.html
+++ b/ilcPortfolio.html
@@ -3,8 +3,8 @@
 
 <head>
     <title>ILC Portfolio</title>
-    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Barlow:300,400,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -31,22 +31,8 @@
             I worked many years as a pharmacy technician while going to school part time and graduated in 2018 from KSU
             with a B.S. in Biology. I gained interest in technology and software engineering a few years ago from a
             roommate. I started working through an online bootcamp and really enjoyed it and learning there are so many
-            possibilities you can apply this to. I also enjoy playing sports, outdoor activities and traveling.
+            possibilities you can apply this to. I also enjoy playing sports, outdoor activities and <a href="travel.html">traveling</a> .
         </p>
-
-        <h4>Where I have been:</h4>
-        <ul>
-            <li>Toronto, Canada</li>
-            <li>Fairbanks, Alaska</li>
-            <li>NYC, New York</li>
-            <li>Seattle, Washington</li>
-            <li>San Juan, Puerto Rico</li>
-            <li>Cancun, Mexico</li>
-            <li>Paris, France</li>
-            <li>Rome, Italy</li>
-            <li>Florence, Italy</li>
-            <li>La Spezia, Italy</li>
-        </ul>
     </section>
 </body>
 
