applied font to pages, and added travel background img

--- a/travel.html
+++ b/travel.html
@@ -8,7 +8,7 @@
 
     </head>
     <body>
-        
+        <main>
         <h1>Where I have been:</h1>
         <ul>
             <li>Toronto, Canada</li>
@@ -22,5 +22,6 @@
             <li>Florence, Italy</li>
             <li>La Spezia, Italy</li>
         </ul>
+    </main>
     </body>
 </html>
