added flexbox styling to travel .placeList blocks

--- a/travel.html
+++ b/travel.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title></title>
-        <link href="https://fonts.googleapis.com/css?family=Barlow:300,400,700&display=swap" rel="stylesheet">
 
-<link rel="stylesheet" href="travel.css">
+<head>
+    <title></title>
+    <link href="https://fonts.googleapis.com/css?family=Barlow:300,400,700&display=swap" rel="stylesheet">
 
-    </head>
-    <body>
-        <main>
-        <h1>Where I have been:</h1>
-        <ul>
+    <link rel="stylesheet" href="travel.css">
+
+</head>
+
+<body>
+    <main>
+        <h1 class="beenTo">Where I have been:</h1>
+        <ul class="placeList">
             <li>Toronto, Canada</li>
             <li>Fairbanks, Alaska</li>
             <li>NYC, New York</li>
@@ -23,5 +25,7 @@
             <li>La Spezia, Italy</li>
         </ul>
     </main>
-    </body>
+        
+</body>
+
 </html>
