--- a/ilcPortfolio.html
+++ b/ilcPortfolio.html
@@ -10,12 +10,18 @@
 <body>
     <header>
         <h1 class="hello">Hello!</h1>
-        <p>Thank you for visiting.</p>
+        <p class="thanks">Thank you for visiting.</p>
         <h2>My name is Isabel</h2>
     </header>
-    <section>
-        <h4 class="aboutme">About me</h4>
-        <img src="" alt="">
+    <nav class="mainNav">
+        <ul>
+            <li><a href="#aboutMe">About</a></li>
+            <li><a href="#contactMe">More</a></li>
+        </ul>
+    </nav>
+    <section id="aboutMe">
+        <h4 class="aboutme" >About me</h4>
+        <img src="#" alt="#">
         <p>
             I come from a very large family. I grew up with people constantly around me, whether I wanted it or not.
             This taught me many valuable things early in life, but the most important is valuing your own personality
@@ -34,6 +40,12 @@
             possibilities you can apply this to. I also enjoy playing sports, outdoor activities and <a href="travel.html">traveling</a> .
         </p>
     </section>
+    <footer id="contactMe">
+        <div class="github">
+            <a href="https://github.com/lim-is-a"></a>
+        </div>
+
+    </footer>
 </body>
 
 </html>
