--- a/ilcPortfolio.html
+++ b/ilcPortfolio.html
@@ -8,20 +8,20 @@
 </head>
 
 <body>
-    <header>
-        <h1 class="hello">Hello!</h1>
-        <p class="thanks">Thank you for visiting.</p>
-        <h2>My name is Isabel</h2>
-    </header>
     <nav class="mainNav">
         <ul>
             <li><a href="#aboutMe">About</a></li>
             <li><a href="#contactMe">More</a></li>
         </ul>
     </nav>
-    <section id="aboutMe">
-        <h4 class="aboutme" >About me</h4>
-        <img src="#" alt="#">
+    <header>
+        <h1 class="hello">Hello!</h1>
+        <p class="thanks">Thank you for visiting.</p>
+        <h2>My name is Isabel</h2>
+    </header>
+    <hr>
+    <section class="fullSection" id="aboutMe">
+        <h4 class="aboutme">About me</h4>
         <p>
             I come from a very large family. I grew up with people constantly around me, whether I wanted it or not.
             This taught me many valuable things early in life, but the most important is valuing your own personality
@@ -37,13 +37,25 @@
             I worked many years as a pharmacy technician while going to school part time and graduated in 2018 from KSU
             with a B.S. in Biology. I gained interest in technology and software engineering a few years ago from a
             roommate. I started working through an online bootcamp and really enjoyed it and learning there are so many
-            possibilities you can apply this to. I also enjoy playing sports, outdoor activities and <a href="travel.html">traveling</a> .
+            possibilities you can apply this to. I also enjoy playing sports, outdoor activities and <a
+                href="travel.html">traveling</a> .
         </p>
     </section>
+    <hr>
     <footer id="contactMe">
-        <div class="github">
-            <a href="https://github.com/lim-is-a"></a>
-        </div>
+
+        <a href="https://github.com/lim-is-a">
+
+            <div class="githuBox">
+                <svg class="octicon octicon-mark-github v-align-middle" height="50" viewBox="0 0 16 16" version="1.1"
+                    width="50" aria-hidden="true">
+                    <path fill-rule="evenodd"
+                        d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z">
+                    </path>
+                </svg>
+                <strong class="githubName"> lim-is-a</strong>
+            </div>
+        </a>
 
     </footer>
 </body>
