added profile img

--- a/ilcPortfolio.html
+++ b/ilcPortfolio.html
@@ -21,6 +21,8 @@
     </header>
     <hr>
     <section class="fullSection" id="aboutMe">
+        <img class="profilePic" src="https://ca.slack-edge.com/T0351JZQ0-USC3EQGKG-cd4766ad6de4-512" alt="profile photo">
+
         <h4 class="aboutme">About me</h4>
         <p>
             I come from a very large family. I grew up with people constantly around me, whether I wanted it or not.
@@ -37,9 +39,10 @@
             I worked many years as a pharmacy technician while going to school part time and graduated in 2018 from KSU
             with a B.S. in Biology. I gained interest in technology and software engineering a few years ago from a
             roommate. I started working through an online bootcamp and really enjoyed it and learning there are so many
-            possibilities you can apply this to. I also enjoy playing sports, outdoor activities and <a
-                href="travel.html">traveling</a> .
+            possibilities you can apply this to. 
         </p>
+        <p>I also enjoy playing sports, outdoor activities, and <a
+            href="travel.html">travel</a> .</p>
     </section>
     <hr>
     <footer id="contactMe">
